# DNDMonteCarloSim

./: .gitignore  README.md  pyproject.toml  sim_output.csv  test_plan.json
src/dndmontecarlosim/: constants.py  main.py  results_record.py  runner.py  sim_methods.py  sim_plan.py  simple_combat_attack_simulation_runner.py
tests/: test_sim_methods.py  write_smoke_test_data.py
