[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dndmontecarlosim"
version = "0.1.0"
description = "Monte Carlo simulation for D&D 5e"
requires-python = ">=3.13"
dependencies = [
    "dataclasses-json==0.6.7",
    "numpy==2.4.4",
    "roller",
    "dndmodels",
]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-html>=3.2",
    "black>=23.0",
    "ruff>=0.1.0",
    "deepdiff>=9.0.0",
    "parameterized>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=dndmontecarlosim --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["dndmontecarlosim"]
omit = ["tests/*"]

[tool.coverage.paths]
# This maps the installed .venv code back to your local src for the report
source = [
    "src/dndmontecarlosim",
    "**/site-packages/dndmontecarlosim"
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.uv.sources]
roller = { git = "https://github.com/jyurkiw/roller.git" }
dndmodels = { git = "https://github.com/jyurkiw/DNDModels.git" }
